--- a/io.github.dagaza.FlipStack.yml
+++ b/io.github.dagaza.FlipStack.yml
@@ -4,8 +4,8 @@ runtime-version: '46'
 sdk: org.gnome.Sdk
 command: flipstack
 finish-args:
-  # Networking (needed if you plan to add syncing later, harmless now)
-  - --share=network
+  # Networking (needed to add syncing later, disabled for now)
+  # - --share=network
   # Display (Wayland + X11 fallback)
   - --socket=fallback-x11
   - --socket=wayland
@@ -32,7 +32,7 @@ modules:
 
       - install -D -m 644 io.github.dagaza.FlipStack.desktop /app/share/applications/io.github.dagaza.FlipStack.desktop
 
-      - cp icons/logo.svg /app/share/icons/hicolor/scalable/apps/io.github.dagaza.FlipStack.svg
+      - cp icons/io.github.dagaza.FlipStack.svg /app/share/icons/hicolor/scalable/apps/io.github.dagaza.FlipStack.svg
 
     sources:
       - type: dir
