fix desktop filename and add gitignore

--- a/io.github.dagaza.FlipStack.desktop
+++ b/io.github.dagaza.FlipStack.desktop
@@ -8,3 +8,4 @@ Terminal=false
 Categories=Education;GTK;
 Keywords=Flashcards;SRS;Learning;
 StartupNotify=true
+Name[en_US]=io.github.dagaza.FlipStack.desktop
