Feat: Add AppImage support and CI/CD workflow
Refactored main.py to support entry points. Added pyproject.toml for modern packaging. Included build_appimage.sh for local builds and a GitHub Actions workflow for automated cross-distro releases.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ backups/
 *.zip
 .vscode/
 venv/
+
+# AppImage Build Artifacts
+linuxdeploy*.AppImage
+linuxdeploy-root/
+linuxdeploy-plugin-python-root/
+AppDir/
+*.AppImage
+bin/
+build/
+*.egg-info/
