--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requires-python = ">=3.8"
 
 # These are the libraries your app needs to run
 dependencies = [
-    "PyGObject",
+    "PyGObject==3.42.2",
 ]
 
 # This creates a 'flipstack' command that runs your main() function
