--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,8 @@ jobs:
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install . 
+        pip install "PyGObject==3.42.2"
+        pip install .
 
     - name: Build AppImage
       # We just run the script you already made!
