--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,14 +22,34 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev python3-gi python3-gi-cairo gir1.2-gtk-4.0 gir1.2-adw-1 libadwaita-1-dev
 
+    # ---------------- NEW STEP STARTS HERE ----------------
+    - name: Setup Build Tools (LinuxDeploy)
+      run: |
+        # 1. Download tools
+        wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+        wget https://github.com/niess/linuxdeploy-plugin-python/releases/download/continuous/linuxdeploy-plugin-python-x86_64.AppImage
+
+        # 2. Make executable
+        chmod +x linuxdeploy*.AppImage
+
+        # 3. Extract LinuxDeploy
+        ./linuxdeploy-x86_64.AppImage --appimage-extract
+        mv squashfs-root linuxdeploy-root
+
+        # 4. Extract Python Plugin
+        ./linuxdeploy-plugin-python-x86_64.AppImage --appimage-extract
+        mv squashfs-root linuxdeploy-plugin-python-root
+    # ---------------- NEW STEP ENDS HERE ------------------
+
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
+        # Force install the compatible PyGObject version first
         pip install "PyGObject==3.42.2"
-        pip install .
+        # Now install the app
+        pip install . 
 
     - name: Build AppImage
-      # We just run the script you already made!
       run: |
         chmod +x build_appimage.sh
         ./build_appimage.sh
