--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
     - name: Install System Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev python3-gi python3-gi-cairo gir1.2-gtk-4.0 gir1.2-adw-1 libadwaita-1-dev
+        # Added libfuse2 which is often required for AppImage tools
+        sudo apt-get install -y libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev python3-gi python3-gi-cairo gir1.2-gtk-4.0 gir1.2-adw-1 libadwaita-1-dev libfuse2
 
-    # ---------------- NEW STEP STARTS HERE ----------------
     - name: Setup Build Tools (LinuxDeploy)
       run: |
         # 1. Download tools
@@ -39,7 +39,11 @@ jobs:
         # 4. Extract Python Plugin
         ./linuxdeploy-plugin-python-x86_64.AppImage --appimage-extract
         mv squashfs-root linuxdeploy-plugin-python-root
-    # ---------------- NEW STEP ENDS HERE ------------------
+
+        # 5. CLEANUP (The Fix)
+        # We MUST remove the .AppImage files so the script doesn't try to run them via FUSE
+        rm linuxdeploy-x86_64.AppImage
+        rm linuxdeploy-plugin-python-x86_64.AppImage
 
     - name: Install Python Dependencies
       run: |
