--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,11 @@ name: Build AppImage & Flatpak
 on:
   push:
     branches: [ "main" ]
-  workflow_dispatch: # Allows you to run this manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   build-appimage:
-    runs-on: ubuntu-22.04 # We build on an older system for maximum compatibility
+    runs-on: ubuntu-22.04
     
     steps:
     - uses: actions/checkout@v3
@@ -15,12 +15,13 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        # We use 3.10 to match the Ubuntu 22.04 system python.
+        # This prevents "ModuleNotFoundError" caused by version mismatches.
+        python-version: '3.10'
 
     - name: Install System Dependencies
       run: |
         sudo apt-get update
-        # Added libfuse2 which is often required for AppImage tools
         sudo apt-get install -y libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev python3-gi python3-gi-cairo gir1.2-gtk-4.0 gir1.2-adw-1 libadwaita-1-dev libfuse2
 
     - name: Setup Build Tools (LinuxDeploy)
@@ -40,17 +41,16 @@ jobs:
         ./linuxdeploy-plugin-python-x86_64.AppImage --appimage-extract
         mv squashfs-root linuxdeploy-plugin-python-root
 
-        # 5. CLEANUP (The Fix)
-        # We MUST remove the .AppImage files so the script doesn't try to run them via FUSE
+        # 5. CLEANUP
         rm linuxdeploy-x86_64.AppImage
         rm linuxdeploy-plugin-python-x86_64.AppImage
 
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        # Force install the compatible PyGObject version first
+        # Force install the compatible PyGObject version
         pip install "PyGObject==3.42.2"
-        # Now install the app
+        # Install the app
         pip install . 
 
     - name: Build AppImage
