--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-appimage:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04  # <--- UPGRADE: Modern Ubuntu (GTK 4.14 / Adw 1.5)
     
     steps:
     - uses: actions/checkout@v3
@@ -15,14 +15,18 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        # We use 3.10 to match the Ubuntu 22.04 system python.
-        # This prevents "ModuleNotFoundError" caused by version mismatches.
-        python-version: '3.10'
+        python-version: '3.12' # Ubuntu 24.04 uses Python 3.12 natively
 
     - name: Install System Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev python3-gi python3-gi-cairo gir1.2-gtk-4.0 gir1.2-adw-1 libadwaita-1-dev libfuse2
+        # We install the modern GTK/Adwaita development stack
+        sudo apt-get install -y \
+          libgirepository1.0-dev \
+          gcc libcairo2-dev pkg-config python3-dev \
+          python3-gi python3-gi-cairo \
+          gir1.2-gtk-4.0 gir1.2-adw-1 libadwaita-1-dev \
+          libfuse2
 
     - name: Setup Build Tools (LinuxDeploy)
       run: |
@@ -33,24 +37,22 @@ jobs:
         # 2. Make executable
         chmod +x linuxdeploy*.AppImage
 
-        # 3. Extract LinuxDeploy
+        # 3. Extract LinuxDeploy (We extract it to run it without FUSE issues)
         ./linuxdeploy-x86_64.AppImage --appimage-extract
         mv squashfs-root linuxdeploy-root
 
-        # 4. Extract Python Plugin
-        ./linuxdeploy-plugin-python-x86_64.AppImage --appimage-extract
-        mv squashfs-root linuxdeploy-plugin-python-root
+        # 4. DOWNLOAD GTK PLUGIN
+        wget https://raw.githubusercontent.com/linuxdeploy/linuxdeploy-plugin-gtk/master/linuxdeploy-plugin-gtk.sh
+        chmod +x linuxdeploy-plugin-gtk.sh
+        mkdir -p bin
+        mv linuxdeploy-plugin-gtk.sh bin/
 
         # 5. CLEANUP
-        rm linuxdeploy-x86_64.AppImage
-        rm linuxdeploy-plugin-python-x86_64.AppImage
+        rm linuxdeploy*.AppImage
 
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        # Force install the compatible PyGObject version
-        pip install "PyGObject==3.42.2"
-        # Install the app
         pip install . 
 
     - name: Build AppImage
