--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           gcc libcairo2-dev pkg-config python3-dev \
           python3-gi python3-gi-cairo \
           gir1.2-gtk-4.0 gir1.2-adw-1 libadwaita-1-dev \
-          libfuse2
+          libfuse2 \
           libgdk-pixbuf-2.0-dev
 
     - name: Setup Build Tools (LinuxDeploy)
